syntax = "proto3";

package com.game.risk.model;

option java_package = "com.game.risk.model.autogen";
option java_outer_classname = "GameStateDataProtos";
message CountriesGraph {
	map < string, Continent > continentMap = 1;
	message CountryLinkedList {
		repeated Country country = 1;
	}

	map < string, CountryLinkedList > countryMap = 2;
	int32 countryCount = 3;
}

message MapFileReader {
	map < string, Country > countryMap = 1;
	map < string, Continent > continentMap = 2;
	CountriesGraph graphDataStructure = 3;
}

message Country {
	string countryName = 1;
	string xCoordinate = 2;
	string yCoordinate = 3;
	string playerName = 4;
	int32 currentArmiesCount = 5;
	string continentName = 6;
}

message Continent {
	string continentName = 1;
	repeated Country belongingCountry = 2;
	int32 controlValue = 3;
}

message Player {
	string playerName = 1;
	enum CardType {
		INFANTRY = 0;
		CAVALRY = 1;
		ARTILLERY = 2;
	}

	message Cards {
		CardType card = 1;
	}

	int32 numberOfArmies = 2;
	double percentageDomination = 3;
	bool isAI = 4;
	repeated Cards cardList = 5;
	repeated Country countryOwned = 6;
}

message GameState {
	Player currentPlayer = 1;
	repeated Player playersList = 2;
}